--- a/styles/bio.css
+++ b/styles/bio.css
@@ -352,7 +352,12 @@ body {
   }
 }
 .footer__social--header {
-  width: 50%;
+  width: 40%;
+}
+@media screen and (min-width: 1280px) {
+  .footer__social--header {
+    width: 30%;
+  }
 }
 .footer__social--site {
   display: none;
@@ -369,7 +374,7 @@ body {
   flex-direction: row;
 }
 .footer__media--container {
-  width: 30%;
+  width: 25%;
   height: auto;
   justify-content: space-between;
   display: flex;
@@ -380,7 +385,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    gap: 3em;
+    gap: 2em;
   }
 }
 .footer__media--logo {
@@ -399,6 +404,11 @@ body {
   .footer__company--container {
     flex-direction: row;
     justify-content: space-between;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .footer__company--container {
+    width: 70%;
   }
 }
 .footer__company {
