--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -266,7 +266,11 @@ body{
 
 
         &--header{
-            width: 50%;
+            width: 40%;
+
+            @include desktop{
+                width: 30%;
+            }
         }
 
         &--site{
@@ -287,7 +291,7 @@ body{
 
         
         &--container{
-            width: 30%;
+            width: 25%;
             height: auto;
             justify-content: space-between;
             display: flex;
@@ -296,7 +300,7 @@ body{
                 display: flex;
                 align-items: center;
                 justify-content: flex-start;
-                gap: 3em;
+                gap: 2em;
             }
         }
 
@@ -319,6 +323,10 @@ body{
         @include tablet{
             flex-direction: row;
             justify-content: space-between;
+        }
+
+        @include desktop{
+            width: 70%;
         }
 
     }
