--- a/styles/bio.css
+++ b/styles/bio.css
@@ -18,90 +18,91 @@
 
 body {
   font-family: "Avenir";
-  font-size: 15px;
-  line-height: 20px;
+  font-size: 0.81rem;
+  line-height: 1.13rem;
   font-weight: 400;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   body {
-    font-size: 14px;
-    line-height: 22px;
+    font-size: 0.88rem;
+    line-height: 1.38rem;
   }
 }
 
 h1 {
-  font-size: 24px;
-  line-height: 32px;
+  font-size: 1.5rem;
+  line-height: 2rem;
   font-family: "Avenir-bold";
   font-weight: 700;
-  padding: 24px 0 16px 0;
+  padding: 1.5rem 0 1rem 0;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   h1 {
-    font-size: 60px;
-    line-height: 68px;
-    padding: 48px 0 36px 0;
+    font-size: 3.75rem;
+    line-height: 4.25rem;
+    padding: 3rem 0 2.25rem 0;
   }
 }
 
 h2 {
-  font-size: 24px;
-  line-height: 32px;
+  font-size: 1.5rem;
+  line-height: 2rem;
   font-family: "Avenir-bold";
   font-weight: 700;
-  padding: 24px 0 16px 0;
+  padding: 1.5rem 0 1rem 0;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   h2 {
-    font-size: 36px;
-    line-height: 44px;
-    padding: 48px 0 36px 0;
+    font-size: 2.25rem;
+    font-family: "Avenir";
+    line-height: 2.75rem;
+    padding: 3rem 0 2.25rem 0;
   }
 }
 
 h3 {
-  font-size: 14px;
-  line-height: 22px;
+  font-size: 0.875rem;
+  line-height: 1.375rem;
   font-family: "Avenir-demi";
   font-weight: 600;
-  padding: 24px 0 16px 0;
+  padding: 1.5rem 0 1rem 0;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   h3 {
-    font-size: 24px;
-    line-height: 32px;
-    padding: 48px 0 36px 0;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    padding: 3rem 0 2.25rem 0;
   }
 }
 
 button {
   color: #ffffff;
   font-family: "Avenir-bold";
-  font-size: 10px;
-  line-height: 20px;
+  font-size: 0.625rem;
+  line-height: 1.25rem;
   background: #afafaf;
   max-height: 2rem;
   min-width: 9.375rem;
   padding: 0 2.0625em 0 2.0625em;
   border-radius: 0.25rem;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   button {
-    font-size: 12px;
-    line-height: 20px;
+    font-size: 0.75rem;
+    line-height: 1.25rem;
     background-color: #000000;
   }
 }
 
 label {
-  font-size: 10px;
-  line-height: 20px;
+  font-size: 0.625rem;
+  line-height: 1.25rem;
   font-family: "Avenir-bold";
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   label {
-    font-size: 12px;
-    line-height: 20px;
+    font-size: 0.75rem;
+    line-height: 1.25rem;
   }
 }
 
@@ -109,21 +110,21 @@ label {
   margin: 0 auto;
   padding: 0 1rem;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   .container {
-    max-width: 768px;
+    max-width: 48rem;
     padding: 0 2.25rem;
   }
 }
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 80rem) {
   .container {
-    max-width: 1280px;
+    max-width: 80rem;
   }
 }
 
 .sitelogo {
-  max-width: 120px;
-  max-height: 20px;
+  max-width: 7.5rem;
+  max-height: 1.25rem;
 }
 
 body {
@@ -159,7 +160,7 @@ body {
   padding: 0;
   margin: auto;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   .nav__list {
     width: 30%;
     justify-content: center;
@@ -193,7 +194,7 @@ body {
   font-weight: 400;
   border-bottom: 0.3rem solid white;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   .nav {
     flex-direction: row;
     width: 100%;
@@ -232,7 +233,7 @@ body {
 .intro__details--container {
   padding-bottom: 1rem;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   .intro__details--container {
     padding: 1rem 3rem;
   }
@@ -255,7 +256,7 @@ body {
   font-weight: 700;
   font-size: 0.8125rem;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   .intro__text #text-source {
     font-size: 0.875rem;
   }
@@ -271,7 +272,7 @@ body {
   flex-direction: column;
   gap: 1rem;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   .intro__text--detail {
     flex-direction: row;
   }
@@ -295,7 +296,7 @@ body {
   gap: 1rem;
   padding-bottom: 1rem;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   .gallery__container {
     flex-direction: row;
     flex-wrap: wrap;
@@ -308,7 +309,7 @@ body {
   height: auto;
   filter: grayscale(0.8);
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   .gallery__image {
     width: 30%;
   }
@@ -326,7 +327,7 @@ body {
   padding-bottom: 1rem;
   position: relative;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   .footer {
     padding-bottom: 2.25rem;
   }
@@ -345,7 +346,7 @@ body {
   flex-direction: column;
   justify-content: flex-start;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   .footer__social {
     flex-direction: row;
     align-items: center;
@@ -354,7 +355,7 @@ body {
 .footer__social--header {
   width: 40%;
 }
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 80rem) {
   .footer__social--header {
     width: 30%;
   }
@@ -362,7 +363,7 @@ body {
 .footer__social--site {
   display: none;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   .footer__social--site {
     display: flex;
     margin-left: auto;
@@ -380,7 +381,7 @@ body {
   display: flex;
   flex-direction: row;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   .footer__media--container {
     display: flex;
     align-items: center;
@@ -400,13 +401,13 @@ body {
   width: 100%;
   position: relative;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   .footer__company--container {
     flex-direction: row;
     justify-content: space-between;
   }
 }
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 80rem) {
   .footer__company--container {
     width: 70%;
   }
@@ -429,7 +430,7 @@ body {
 .footer__logo {
   margin: 1rem 0 1rem 0;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   .footer__logo {
     display: none;
   }
